Add PlanSelection, SignupForm updates and fix type issues

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3.8'
 services:
   backend:
-    build: ../backend
+    build:
+      context: ../backend
     ports:
       - "4000:4000"
+
   frontend:
-    build: ../frontend
+    build:
+      context: ../frontend-next
     ports:
       - "3000:3000"
