--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-CMD ["npm", "run", "dev"]
-EXPOSE 4000
+RUN npm run build
+EXPOSE 3000
+CMD ["npm", "start"]
